@@ -7,12 +7,21 @@ import android.content.Context;
 import android.content.SharedPreferences;
 import android.content.pm.PackageManager;
 import android.content.res.AssetFileDescriptor;
+import android.database.Cursor;
+import android.location.Address;
+import android.location.Geocoder;
 import android.location.Location;
 import android.location.LocationListener;
 import android.location.LocationManager;
 import android.media.MediaPlayer;
+import android.media.PlaybackParams;
+import android.net.Uri;
+import android.app.FragmentManager;
+import android.app.FragmentTransaction;
+import android.os.AsyncTask;
 import android.os.Bundle;
 import android.support.annotation.NonNull;
+import android.support.annotation.Nullable;
 import android.support.design.widget.BottomNavigationView;
 import android.support.v4.app.ActivityCompat;
 import android.support.v7.app.AppCompatActivity;
@@ -21,18 +30,29 @@ import android.view.MenuItem;
 import android.view.View;
 import android.widget.ProgressBar;
 import android.widget.Toast;
+
+
+import com.google.android.gms.common.ConnectionResult;
+import com.google.android.gms.common.api.GoogleApiClient;
+
+import java.lang.reflect.Field;
+import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Locale;
 
 /** AlbumView class to handle logic associated with playing Songs from an album.
-  * Author: CSE 110 - Team 16, Winter 2018
-  * Date: February 7, 2018
+ * Author: CSE 110 - Team 16, Winter 2018
+ * Date: February 7, 2018
  */
 public class AlbumView extends AppCompatActivity {
 
     public PopulateMusic populateMusic;
     public MediaPlayer mediaPlayer;
-    public ArrayList<Song> album_playlist;
+    public LinkedList<Song> album_playlist;
     public Song currentlyPlaying;
     public BottomNavigationView navigation;
     public ProgressBar progressBar;
@@ -115,6 +135,7 @@ public class AlbumView extends AppCompatActivity {
         FlashbackMode flashbackMode = new FlashbackMode(currentLocationInfo.getLocation(), TimeMachine.now(),populateMusic);
         queuedSongs= flashbackMode.initiate();
         isFlashbackMode = true;
+       // Toast.makeText(this, Integer.valueOf(queuedSongs.get(0).getScore()).toString(), Toast.LENGTH_SHORT).show();
         if(mediaPlayer == null){
             createMediaPlayer();
         }
@@ -123,7 +144,10 @@ public class AlbumView extends AppCompatActivity {
         SharedPreferences sharedPreferences = getApplicationContext().getSharedPreferences("user_name", MODE_PRIVATE);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putString("song_name",queuedSongs.get(0).get_title());
-        editor.putString("song_album",queuedSongs.get(0).get_album());
+        editor.putString("album_name",queuedSongs.get(0).get_album());
+        editor.putString("artist_name",queuedSongs.get(0).get_artist());
+        editor.putString("address", queuedSongs.get(0).get_last_played_address());
+        editor.putString("time", queuedSongs.get(0).get_last_time());
         editor.apply();
 
         sharedPreferences = getSharedPreferences("flash_back_mode", MODE_PRIVATE);
@@ -144,8 +168,12 @@ public class AlbumView extends AppCompatActivity {
         progressBar = findViewById(R.id.progressBar);
         progressBar.setVisibility(View.GONE);
         populateMusic = new PopulateMusic(this);
-        intervalStart=LocalTime.parse("11:00:00");
-        intervalEnd= LocalTime.parse("16:00:00");
+       // intervalStart=LocalTime.parse("11:00:00");
+        //intervalEnd= LocalTime.parse("16:00:00");
+
+        LocalDateTime dummyTime = LocalDateTime.of(2017, 2, 7, 12, 00);
+        TimeMachine.useFixedClockAt(dummyTime);
+
 
         navigation = (BottomNavigationView) findViewById(R.id.navigation);
         navigation.setOnNavigationItemSelectedListener(mOnNavigationItemSelectedListener);
@@ -189,6 +217,8 @@ public class AlbumView extends AppCompatActivity {
         }
         locationManger.requestLocationUpdates(locationProvider,3000,0,locationListener);
 
+
+
         SharedPreferences sharedPreferences = getSharedPreferences("flash_back_mode", MODE_PRIVATE);
         SharedPreferences.Editor editor = sharedPreferences.edit();
 
@@ -230,7 +260,11 @@ public class AlbumView extends AppCompatActivity {
         }
     }
 
-    public void createMediaPlayer() {  mediaPlayer = new MediaPlayer();}
+    public void createMediaPlayer() {
+        mediaPlayer = new MediaPlayer();
+        //float speed=3f;
+       // mediaPlayer.getPlaybackParams().setSpeed(speed);
+    }
 
     public void loadMedia(final Song selected_song) {
         if(mediaPlayer == null){
@@ -249,12 +283,28 @@ public class AlbumView extends AppCompatActivity {
                 Location currentLocation = currentLocationInfo.getLocation();
                 selected_song.addLocation(currentLocation);
                 selected_song.addDateTime(TimeMachine.now());
+
+                Log.d("long + lat", Double.valueOf(currentLocation.getLatitude()).toString() + " "+  Double.valueOf(currentLocation.getLongitude()).toString());
+
+                /* doesn't work, attempt to get address
+                new AsyncTaskAddress().execute(currentLocation.getLatitude(),currentLocation.getLongitude());
+                selected_song.set_last_played_address(mAddressOutput);
+                */
+
                 mediaPlayer.start();
 
                 if(isFlashbackMode){
                     Toast.makeText(getApplicationContext(), "song completed!", Toast.LENGTH_SHORT).show();
                     mediaPlayer.reset();
                     loadMedia(queuedSongs.get(0));
+                    SharedPreferences sharedPreferences = getSharedPreferences("user_name", MODE_PRIVATE);
+                    SharedPreferences.Editor editor = sharedPreferences.edit();
+                    editor.putString("song_name",queuedSongs.get(0).get_title());
+                    editor.putString("artist_name", queuedSongs.get(0).get_artist());
+                    editor.putString("album_name",queuedSongs.get(0).get_album());
+                    editor.putString("address", queuedSongs.get(0).get_last_played_address());
+                    editor.putString("time", queuedSongs.get(0).get_last_time());
+                    editor.apply();
                     queuedSongs.remove(0);
                 }
                 else {
@@ -287,7 +337,15 @@ public class AlbumView extends AppCompatActivity {
                 mediaPlayer = new MediaPlayer();
             }
             mediaPlayer.reset();
-            Song curr_song = album_playlist.remove(0);
+            Song curr_song = album_playlist.removeFirst();
+            SharedPreferences sharedPreferences = getApplicationContext().getSharedPreferences("user_name", MODE_PRIVATE);
+            SharedPreferences.Editor editor = sharedPreferences.edit();
+            editor.putString("song_name",curr_song.get_title());
+            editor.putString("album_name",curr_song.get_album());
+            editor.putString("artist_name",curr_song.get_artist());
+            editor.putString("time", curr_song.get_last_time());
+            editor.putString("address", curr_song.get_last_played_address());
+            editor.apply();
             loadMedia(curr_song);
         }
     }
@@ -305,6 +363,33 @@ public class AlbumView extends AppCompatActivity {
     public void onBackPressed() {
         moveTaskToBack(true);
     }
+    private String getCompleteAddressString(double LATITUDE, double LONGITUDE) {
+        String strAdd = "";
+        Geocoder geocoder = new Geocoder(this, Locale.getDefault());
+        try {
+            List<Address> addresses = geocoder.getFromLocation(LATITUDE, LONGITUDE, 1);
+            if (addresses != null) {
+                Address returnedAddress = addresses.get(0);
+                StringBuilder strReturnedAddress = new StringBuilder("");
 
+                for (int i = 0; i <= returnedAddress.getMaxAddressLineIndex(); i++) {
+                    strReturnedAddress.append(returnedAddress.getAddressLine(i)).append("\n");
+                }
+                strAdd = strReturnedAddress.toString();
+                Log.w("My Current loction address", strReturnedAddress.toString());
+            } else {
+                Log.w("My Current loction address", "No Address returned!");
+            }
+        } catch (Exception e) {
+
+           Log.w("exception: ", e.getClass().getName());
+           /* e.printStackTrace();
+            Log.w("My Current loction address", "Canont get Address!");
+            */
+        }
+        return strAdd;
+    }
     public PopulateMusic getPopulateMusic() { return populateMusic;}
+
+
 };
